--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   
   <div class="brands-list">
     <div class="wrapper">
-      <img src="/img/banana-milk.svg" alt="logo corona">
-      <img src="/img/cherry-and-strawb.svg" alt="logo crocs">
-      <img src="/img/cherry-choco.svg" alt="logo css">
-      <img src="/img/cherry-cream.svg" alt="logo cupnoodle">
-      <img src="/img/chocomenta.svg" alt="logo discord">
-      <img src="/img/confects-choco.svg" alt="logo monster energetic">
-      <img src="/img/strawberry-cream.svg" alt="logo only">
-      <img src="/img/strawberry.svg" alt="logo policia federal">
+      <img src="/img/banana-milk.svg" alt="">
+      <img src="/img/cherry-and-strawb.svg" alt="">
+      <img src="/img/cherry-choco.svg" alt="">
+      <img src="/img/cherry-cream.svg" alt="">
+      <img src="/img/chocomenta.svg" alt="">
+      <img src="/img/confects-choco.svg" alt="">
+      <img src="/img/strawberry.svg" alt="">
+      <img src="/img/strawberry-cream.svg" alt="">
     </div>
   </div>
 
